--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
     font-family: 'Comfortaa', sans-serif;
+    background-image: linear-gradient(45deg, var(--color-sky-100), white);
 }
 
 .sun-gradient {
