--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,13 @@
 
 body {
     font-family: 'Comfortaa', sans-serif;
+}
+
+.day-gradient {
     background-image: linear-gradient(45deg, var(--color-sky-100), white);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .sun-gradient {
